# xray-amnezia-status-bot

./: .gitignore  .pylintrc  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
.github/workflows/: kotlin.yml  pylint.yml
deploy/: statusbot-python.service  statusbot.env.example  statusbot.service
src/main/kotlin/statusbot/: AlertingService.kt  Attribution.kt  Checks.kt  Main.kt  Models.kt  MonitoringService.kt  Settings.kt  StatusBot.kt  StatusFormatter.kt  TelegramGateway.kt
src/test/kotlin/statusbot/: AlertingServiceTest.kt  IncidentAttributionEvaluatorTest.kt  StatusFormatterTest.kt  StatusOutputSmokeTest.kt
statusbot/: alerting.py  bot.py  checks.py  config.py  formatter.py  main.py  models.py  service.py
